# Engram

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FIATLUX.md  README.md  agent-bootstrap.toml  extract_names.py  install-worktree.sh  openclaw-report.md  prune_links.py  pyproject.toml  setup.html  setup.sh
core/memory/working/projects/rate-my-set/IN/better-base-dev/: .dockerignore  .editorconfig  .env.local.template  .gitignore  .local.template.env  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .taskfile.template.env  AGENTS.md  README.md  Taskfile.yml  agents.toml  dc.ci.yml  dc.dev.yml  dc.prod.yml  dc.stage.yml  dev_setup.bat  dev_setup.ps1  dev_setup.sh  eslint.config.mjs  manage.py  opencode.json  package.json  pyproject.toml  render.yaml  taplo.toml  tsconfig.app.json  tsr.config.json  vite.config.ts
core/memory/working/projects/rate-my-set/IN/better-base-dev/.codex/: config.toml
core/memory/working/projects/rate-my-set/IN/better-base-dev/.cursor/: mcp.json
core/memory/working/projects/rate-my-set/IN/better-base-dev/.cursor/rules/: chakra-ui-rules.mdc  design-system-rules.mdc  tanstack-react-router_api.mdc  tanstack-react-router_guide.mdc  tanstack-react-router_installation.mdc  tanstack-react-router_routing.mdc  tanstack-react-router_setup-and-architecture.mdc
core/memory/working/projects/rate-my-set/IN/better-base-dev/.envs/.ci/: .env
core/memory/working/projects/rate-my-set/IN/better-base-dev/.envs/.dev/: .celery.env  .django.env  .docker.env  .gitignore  .node.env  .postgres.env  .redis.env  .secrets.template.env  .specific.template.env
core/memory/working/projects/rate-my-set/IN/better-base-dev/.envs/.prod/: .backend.template.env  .frontend.template.env  .gitignore  .postgres.template.env
core/memory/working/projects/rate-my-set/IN/better-base-dev/.github/: dependabot.yml  pull_request_template.md
core/memory/working/projects/rate-my-set/IN/better-base-dev/.github/workflows/: ci.yml
core/memory/working/projects/rate-my-set/IN/better-base-dev/.storybook/: main.ts
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/: AGENTS.md  conftest.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/accounts/: apps.py  urls.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/auth/: apps.py  urls.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/base/: apps.py  staticfiles.py  storages.py  tasks.py  views.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/templates/: index.html
core/memory/working/projects/rate-my-set/IN/better-base-dev/backend/utils/: case_insensitive_emails.py  class_properties.py  databases.py  date_filters.py  dictionaries.py  emails.py  files.py  fixture_serialization.py  future_uuids.py  images.py  json.py  model_fields.py  model_indexes.py  model_state.py  proxy_models.py  redis.py  repr.py  timedeltas.py  transactions.py  urls.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/config/: api_router.py  celery_app.py  urls.py  wsgi.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/config/settings/: base.py  ci.py  dev.py  prod.py  root.py  stage.py  test.py
core/memory/working/projects/rate-my-set/IN/better-base-dev/docs/: code_setup.md  conf.py  deployment_checklist.md  getting_started.md  howto.rst  index.rst  philosophy.md
core/memory/working/projects/rate-my-set/IN/better-base-dev/docs/agent-notes/: 2026-01-19 Design System Rules Documentation.md  2026-02-02 Oxlint Integration.md  2026-02-03 Vite Staticfiles Hashing Fix.md  2026-02-12 Python Dependency Script Hardening.md  2026-03-06 Better Base Dotagents and Guidance Port.md  2026-03-06 Sync Best Practices Initial Guidance.md  2026-03-06 Sync Client Mocking Docs Reorganization.md  2026-03-06 Sync Workflow Docs Imported.md  2026-03-06 Third-Party Mocking Guidance.md  2026-03-09 Dependency Update Run.md  2026-03-09 Dependency Update Skill.md  2026-03-09 Django Target Version Sync In Dependency Updates.md  2026-03-09 Dotagents V1 Alignment.md  2026-03-10 Dockerfile Optimization Port From Ren Magic.md  2026-03-24 Dependency Update Run.md  2026-03-24 TanStack Intent Review Hold.md  2026-03-24 Update Deps Skill Docker Build Verification.md  2026-03-24 Vite Plugin React 6 Rolldown Follow-up.md
core/memory/working/projects/rate-my-set/IN/better-base-dev/docs/engineering/: agent-instruction-governance.md  api-client-best-practices.md  api-client-reference-patterns.md  code-review-checklist.md  operations-pattern.md  style-guide.md  sync-best-practices.md  sync-reference-patterns.md  third-party-mocking-best-practices.md  third-party-mocking-reference-patterns.md
core/memory/working/projects/rate-my-set/IN/better-base-dev/docs/pycharm/: configuration.rst
core/memory/working/projects/rate-my-set/IN/better-base-dev/emails/: change-email.tsx  emailStyles.ts  example.tsx  notify-original-email-of-email-change-request.tsx  reset-password.tsx  team-invitation.tsx  tsconfig.json  verify-email.tsx
core/memory/working/projects/rate-my-set/IN/better-base-dev/emails/components/: FooterTransactional.tsx  LogoSmall.tsx
core/memory/working/projects/rate-my-set/IN/better-base-dev/emails/core/: variables.ts
core/memory/working/projects/rate-my-set/IN/better-base-dev/frontend/: AGENTS.md  DefaultNotFoundComponent.tsx  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
core/memory/working/projects/rate-my-set/IN/better-base-dev/frontend/api/: csrf.ts  initialData.ts  initialServerData.ts  request.ts  requestBase.ts
core/memory/working/projects/rate-my-set/IN/better-base-dev/frontend/devtools/: jotaiDevtools.tsx  (+1 more)
core/memory/working/projects/rate-my-set/IN/better-base-dev/public/: site.webmanifest
core/memory/working/projects/rate-my-set/IN/better-base-dev/scripts/: .gitignore  any_backend_secrets.template.py  any_shared_secrets.template.py  check_vite_staticfiles_hashing.py  fix_email_txt_wrapping.py  pull_render_env_group.py  push_secrets_to_render_env_group.py  sync_upgraded_python_reqs.py  upgrade_python_reqs.py
(+1125 files in other folders)
