[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-mcp"
version = "0.1.0"
description = "Git-versioned Markdown memory system with MCP server for LLM agents"
readme = "README.md"
requires-python = ">=3.10"

# Base install stays empty so the format layer can be imported without pulling
# in MCP runtime dependencies.
dependencies = []

[project.scripts]
engram-mcp = "engram_mcp.agent_memory_mcp.server_main:main"
engram-sidecar = "engram_mcp.agent_memory_mcp.sidecar.cli:main"

[project.optional-dependencies]
# Install with: pip install -e ".[core]"
core = ["python-frontmatter>=1.1", "PyYAML>=6.0"]

# Install with: pip install -e ".[server]"
server = ["mcp>=1.0", "python-frontmatter>=1.1", "PyYAML>=6.0"]

# Install with: pip install -e ".[search]"
search = ["sentence-transformers>=2.6", "numpy>=1.24"]

# Install with: pip install -e ".[dev]"
dev = [
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "time-machine>=2.0",
    "mcp>=1.0",
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = [
    "engram_mcp",
    "engram_mcp.agent_memory_mcp",
    "engram_mcp.agent_memory_mcp.core",
    "engram_mcp.agent_memory_mcp.sidecar",
    "engram_mcp.agent_memory_mcp.sidecar.parsers",
    "engram_mcp.agent_memory_mcp.tools",
    "engram_mcp.agent_memory_mcp.tools.read_tools",
    "engram_mcp.agent_memory_mcp.tools.semantic",
]

[tool.setuptools.package-dir]
engram_mcp = "core/tools"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["HUMANS/tooling/tests", "core/tools/tests"]
asyncio_mode = "auto"
markers = [
    "eval: marks tests as eval scenario tests (deselect with '-m \"not eval\"')",
    "asyncio: marks tests as async (requires pytest-asyncio)",
]
