# ==== coverage ====
# https://github.com/nedbat/coveragepy
[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "backend/utils/future_uuids",
    "backend/utils/future_uuids.py",
    "backend/utils/future_uuids/*",
    "backend/utils/sentinels/*",
    "backend/templates/*",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html#sample-file
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about type checking blocks:
    "if TYPE_CHECKING:",
]

# ==== mypy ====
# https://github.com/python/mypy
[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
exclude = [
    "future_uuids.py$",
    # Exclude `bin/activate_this.py` (which may currently show up in Dockerized
    # environments).
    "^bin/activate_this\\.py$",
]
ignore_missing_imports = true
local_partial_types = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
# Allow tests to have untyped definitions.
disallow_untyped_defs = false

# `django_stubs`: https://github.com/typeddjango/django-stubs
[tool.django-stubs]
django_settings_module = "config.settings.dev"


# ==== pytest ====
# https://github.com/pytest-dev/pytest
[tool.pytest.ini_options]
minversion = "9.0.2"
addopts = "--ds=config.settings.test --reuse-db --strict-config --strict-markers"
python_files = ["tests.py", "test_*.py"]
norecursedirs = [
    ".cache",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".react-email",
    ".ruff_cache",
    ".swc",
    ".venv",
    "build",
    "dist",
    "dist-ssr",
    "htmlcov",
    "node_modules",
    "staticfiles",
    "venv",
]


# ==== ruff ====
# https://github.com/astral-sh/ruff
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".pytest_cache",
    ".react-email",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "future_uuids.py",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "htmlcov",
    "staticfiles",
    "venv",
]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "E501",    # Line too long - `ruff format` will handle formatting anyway
    "COM812",  # Trailing comma missing
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "RUF001",  # Checks for ambiguous Unicode characters in strings
    "RUF005",  # Consider {expr} instead of concatenation
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",  # Prefer next({iterable}) over single element slice
    "UP040",   # Type alias `...` uses `TypeAlias` annotation instead of the `type` keyword - `mypy` not supported yet
    "UP046",   # Generic class uses `Generic` subclass instead of type parameters
    "UP047",   # Generic function should use type parameters
]
per-file-ignores = { "__init__.py" = [
    "F401", # {name} imported but unused; consider using importlib.util.find_spec to test for availability
], "**/migrations/*.py" = [
    "I001", # Import block is un-sorted or un-formatted
    "I002", # Missing required import
], "**/test_*.py" = [
    "PLR0124", # Name compared with itself, consider replacing {left} {} {right}
    "PLR0915", # Too many statements ({statements} > {max_statements})
] }
select = [
    "F",    # Pyflakes               (F)    - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "E",    # pycodestyle error      (E)    - https://docs.astral.sh/ruff/rules/#error-e
    "I",    # isort                  (I)    - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",   # pyupgrade              (UP)   - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "YTT",  # flake8-2020            (YTT)  - https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
    "B",    # flake8-bugbear         (B)    - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",   # flake8-comprehensions  (C4)   - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "COM",  # flake8-commas          (COM)  - https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "T20",  # flake8-print           (T20)  - https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SLOT", # flake8-slots           (SLOT) - https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "RUF",  # Ruff-specific          (RUF)  - https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["backend", "bridge", "config", "frontend"]
required-imports = ["from __future__ import annotations"]


# === djlint ===
# https://github.com/djlint/djlint

[tool.djlint]
ignore = "H016,H030,H031,H021"


# ==== uv ====
# https://github.com/astral-sh/uv

[project]
name = "better-base"
readme = "README.md"
requires-python = ">= 3.14"
version = "0.1.0"

dependencies = [
    # General
    # ------------------------------------------------------------------------------
    "argon2-cffi==25.1.0",     # https://github.com/hynek/argon2_cffi
    "attrs==26.1.0",           # https://github.com/python-attrs/attrs
    "bidict==0.23.1",          # https://github.com/jab/bidict
    "case-converter==1.2.0",   # https://github.com/chrisdoherty4/python-case-converter
    "cryptography==46.0.5",    # https://github.com/pyca/cryptography
    "httpx==0.28.1",           # https://github.com/encode/httpx
    "humanize==4.15.0",        # https://github.com/python-humanize/humanize
    "ipython==9.11.0",         # https://github.com/ipython/ipython
    "nocasedict==2.2.0",       # https://github.com/pywbem/nocasedict
    "numpy==2.4.3",            # https://github.com/numpy/numpy
    "pillow==12.1.1",          # https://github.com/python-pillow/Pillow
    "orjson==3.11.7",          # https://github.com/ijl/orjson
    "pygments==2.19.2",        # https://github.com/pygments/pygments
    "python-slugify==8.0.4",   # https://github.com/un33k/python-slugify
    "requests==2.32.5",        # https://github.com/psf/requests
    "rich==14.3.3",            # https://github.com/Textualize/rich
    "sortedcontainers==2.4.0", # https://github.com/grantjenks/python-sortedcontainers
    "tenacity==9.1.4",         # https://github.com/jd/tenacity
    "tzdata==2025.3",          # https://github.com/python/tzdata
    "whitenoise==6.12.0",      # https://github.com/evansd/whitenoise

    # Django
    # ------------------------------------------------------------------------------
    "django-cachalot==2.9.0",    # https://github.com/noripyt/django-cachalot
    "django-environ==0.13.0",    # https://github.com/joke2k/django-environ
    "django-extensions==4.1",    # https://github.com/django-extensions/django-extensions
    "django-filter==25.2",       # https://github.com/carltongibson/django-filter
    "django-ipware==7.0.1",      # https://github.com/un33k/django-ipware
    "django-jsoneditor==0.2.4",  # https://github.com/nnseva/django-jsoneditor
    "django-model-utils==5.0.0", # https://github.com/jazzband/django-model-utils
    "django-vite==3.1.0",        # https://github.com/MrBin99/django-vite
    "django==6.0.3",             # https://www.djangoproject.com/
    "djangoql==0.19.1",          # https://github.com/ivelum/djangoql

    # Django REST Framework
    "django-cors-headers==4.9.0",            # https://github.com/adamchainz/django-cors-headers
    "djangorestframework-camel-case==1.4.2", # https://github.com/vbabiy/djangorestframework-camel-case
    "djangorestframework==3.17.0",           # https://github.com/encode/django-rest-framework
    "drf-orjson-renderer==1.8.0",            # https://github.com/brianjbuck/drf_orjson_renderer

    # DRF Spectacular for API Documentation
    "drf-spectacular==0.29.0", # https://github.com/tfranzel/drf-spectacular

    # Celery
    # ------------------------------------------------------------------------------
    "celery==5.6.2",                # https://github.com/celery/celery
    "django-celery-beat==2.9.0",    # https://github.com/celery/django-celery-beat
    "django-celery-results==2.6.0", # https://pypi.org/project/django-celery-results
    "flower==2.0.1",                # https://github.com/mher/flower

    # Redis
    # ------------------------------------------------------------------------------
    "django-redis==6.0.0", # https://github.com/jazzband/django-redis
    "hiredis==3.3.1",      # https://github.com/redis/hiredis-py
    "redis==7.4.0",        # https://github.com/redis/redis-py

    # Static Typing
    # ------------------------------------------------------------------------------
    "django-stubs==6.0.1",               # https://github.com/typeddjango/django-stubs
    "django-stubs-ext==6.0.1",           # https://pypi.org/project/django-stubs-ext/
    "djangorestframework-stubs==3.16.8", # https://github.com/typeddjango/djangorestframework-stubs
    "mypy[faster-cache]==1.19.1",        # https://github.com/python/mypy

    # Structured Logging
    "django-structlog==10.0.0", # https://github.com/jrobichaud/django-structlog
    "structlog==25.5.0",        # https://github.com/hynek/structlog
]

[tool.uv]
default-groups = ["dev"]
# NOTE: You can turn this on to enable pre-releases, but be aware of the side effects of
# doing so. I.E. see docs on the `--prerelease` flag here:
# https://docs.astral.sh/uv/reference/cli/#uv-sync
# prerelease = "allow"

[dependency-groups]
dev = [
    # PostgreSQL
    # ------------------------------------------------------------------------------
    "psycopg[binary]==3.3.3", # https://github.com/psycopg/psycopg

    # General
    # ------------------------------------------------------------------------------
    "watchfiles==1.1.1", # https://github.com/samuelcolvin/watchfiles
    "werkzeug==3.1.7",   # https://github.com/pallets/werkzeug

    # Testing
    # ------------------------------------------------------------------------------
    "dirty-equals==0.11",      # https://github.com/samuelcolvin/dirty-equals
    "pyquery==2.0.1",          # https://github.com/gawel/pyquery
    "pytest-django==4.12.0",   # https://github.com/pytest-dev/pytest-django
    "pytest-mock==3.15.1",     # https://github.com/pytest-dev/pytest-mock
    "pytest-structlog==1.2",   # https://github.com/wimglenn/pytest-structlog
    "pytest-subtests==0.15.0", # https://github.com/pytest-dev/pytest-subtests
    "pytest-sugar==1.1.1",     # https://github.com/Frozenball/pytest-sugar
    "pytest-xdist==3.8.0",     # https://github.com/pytest-dev/pytest-xdist
    "pytest==9.0.2",           # https://github.com/pytest-dev/pytest

    # Test Coverage
    "coverage==7.13.5",              # https://github.com/nedbat/coveragepy
    "django-coverage-plugin==3.2.0", # https://github.com/nedbat/django_coverage_plugin
    "pytest-cov==7.1.0",             # https://github.com/pytest-dev/pytest-cov

    # Code quality
    # ------------------------------------------------------------------------------
    "djade==1.9.0",   # https://github.com/adamchainz/djade
    "djlint==1.36.4", # https://github.com/djlint/djLint
    "prek==0.3.8",    # https://github.com/j178/prek
    "ruff==0.15.7",   # https://github.com/astral-sh/ruff

    # Factories and Mock/Fake Data
    # ------------------------------------------------------------------------------
    "factory-boy==3.3.3",    # https://github.com/FactoryBoy/factory_boy
    "faker==40.11.1",        # https://github.com/joke2k/faker
    "requests-mock==1.12.1", # https://github.com/jamielennox/requests-mock
    "respx==0.22.0",         # https://github.com/lundberg/respx
    "time-machine==3.2.0",   # https://github.com/adamchainz/time-machine

    # Debugging
    # ------------------------------------------------------------------------------
    "django-debug-toolbar==6.2.0", # https://github.com/jazzband/django-debug-toolbar
    "ipdb==0.13.13",               # https://github.com/gotcha/ipdb

    # Misc/Useful
    # ------------------------------------------------------------------------------
    "pyperclip==1.11.0", # https://github.com/asweigart/pyperclip
]
prod = [
    # PostgreSQL
    # --------------------------------------------------------------------------
    "psycopg[c]==3.3.3; sys_platform != 'win32' and sys_platform != 'darwin'", # https://github.com/psycopg/psycopg

    # Production
    # ------------------------------------------------------------------------------
    "django-anymail==14.0",        # https://github.com/anymail/django-anymail
    "django-storages[s3]==1.14.6", # https://github.com/jschneier/django-storages
    "gunicorn==25.1.0",            # https://github.com/benoitc/gunicorn
    "sentry-sdk==2.56.0",          # https://github.com/getsentry/sentry-python
    "structlog-sentry==2.2.1",     # https://github.com/kiwicom/structlog-sentry
]
